# secure_vault

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  docker-compose.yml
backend/migrations/: 20250802092910_alter_column.sql  20250802093705_otp_verif.sql  20250807103026_update_otp_verif_field.sql  20250809100538_users_add_nonce.sql  20251026161256_lowercase_column_name.sql  20251026163325_fix_nullable_created_at.sql  20251109090535_add_refresh_token_table.sql
backend/src/: error.rs  main.rs  models.rs  startup.rs
backend/src/application/: user.rs
backend/src/controller/: app_state.rs  health_check.rs  user.rs
backend/src/helper/: fetch_user_basic_info.rs  mod.rs
backend/src/infra/: app.rs  config.rs  db.rs  mod.rs  setup.rs
backend/src/infra/middleware/: error_handler.rs  mod.rs  request_id.rs
backend/src/model/: app_error.rs  jwt.rs  mod.rs  otp.rs  response.rs  user.rs
backend/src/persistence/: mod.rs  otp.rs  postgres.rs  user.rs
backend/src/routes/: get_user_basic_info.rs  get_verif_otp.rs  mod.rs  sign_up.rs  update_verif_otp.rs  verif_otp.rs
backend/src/service/: email.rs  error_axum.rs  jwt.rs  mod.rs  otp.rs  session.rs  user.rs
backend/src/validation/: user.rs
docs/: auth.md  session.md  user.md  vault.md
frontend/: index.html  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/components/: navbar.tsx
frontend/src/: App.tsx
frontend/vault_wasm/: Cargo.toml
frontend/vault_wasm/src/: lib.rs
migrations/: 20250802082900_init.sql  20250805140959_update_otp_verif_time_format.sql  20250805144412_update_username_to_not_null.sql  20251026163838_change_to_not_null_and_default_false.sql  20251119135051_change_user_ident_to_string.sql  20260111093245_add_auth_verifier.sql  20260119001533_add_token_family.sql  20260121095242_remove_name_from_credentials.sql  20260122063257_add_title_type_field_and_rename_table.sql  20260122082405_change_type_to_text.sql  20260122130500_change_some_column_type.sql  20260124071901_create_idx_vaults_title.sql
src/: lib.rs  main.rs
src/application/: auth.rs  mod.rs  otp.rs  user.rs  vault.rs
src/controller/: app_state.rs  auth.rs  mod.rs  session.rs  user.rs  vault.rs
src/infra/: app.rs  config.rs  db.rs  mod.rs  setup.rs  telemetry.rs
src/model/: app_error.rs  jwt.rs  mod.rs  otp.rs  rate_limiter.rs  response.rs  user.rs  vault.rs
src/persistence/: jwt.rs  mod.rs  otp.rs  postgres.rs  user.rs
src/service/: cookie.rs  email.rs  error_axum.rs  jwt.rs  mod.rs  (+5 more)
ui/: .cta.json  .gitignore  Cargo.toml  middleware.ts  nuxt.config.ts  package-lock.json  package.json  vite.config.ts
ui/enc_dec/: Cargo.toml
ui/enc_dec/src/: error.rs  lib.rs  model.rs  user.rs  vault.rs
(+147 files in other folders)
