[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
lettre = "0.11.18"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
unicode-segmentation = "1.9.0"
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
bytes = "1.11.0"
http-body-util = "0.1.3"
once_cell = "1.21.3"
wiremock = "0.6.5"
reqwest = { version = "0.12.24", features = ["json"] }
secrecy = "0.10.3"
axum-extra = { version = "0.12.2", features = ["cookie"] }
time = "0.3.44"
constant_time_eq = "0.3.1"
