[package]
name = "vault_wasm"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1" }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
wasm-bindgen = "0.2.100"
zeroize = "1.8.1"
